--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@
 
 buildscript {
     ext.kotlin_version = '1.7.0'
+    ext.hilt_version = '2.38.1'
     repositories {
         google()
         mavenCentral()
@@ -25,6 +26,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
