Implement Room, Paging, and Hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,8 @@ dependencies {
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+//    implementation "androidx.hilt:hilt-work:$hilt_version"
+
+    implementation "androidx.activity:activity-ktx:1.9.0"
+
 }
