Offline mode - Notify user when the internet is not connected - Alert user about offline features/keywords that are available to use
Stored Keywords
- Create a separate feature to show user stored search keywords
- On clicking the keyword, it should open a list of results for user to explore

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.android.codelabs.paging">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
@@ -27,7 +29,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.android.codelabs.paging.ui.SearchRepositoriesActivity"
+            android:name="com.example.android.codelabs.paging.ui.SearchActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
